<resources>
    <string name="app_name">Chat</string>
    <string name="home">홈</string>
    <string name="chatting">채팅</string>
    <string name="mypage">마이페이지</string>
    <string name="signUp">회원가입</string>
    <string name="login">로그인</string>
    <string name="hint_password">패스워드</string>
    <string name="hint_id">아이디</string>
    <string name="title_of_mypage">마이페이지</string>
    <string name="sales_item">상품 목록</string>
    <string name="item_insert_toolbar_title">상품 등록</string>
    <string name="hint_item_title">상품 이름</string>
    <string name="hint_price">가격</string>
    <string name="storage_path">items/photo</string>
</resources>