<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/itemInsertToolbarTitle"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/item_insert_toolbar_title"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <View
        android:id="@+id/toolbarLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemInsertToolbarTitle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleIntputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarLine"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idEditTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="20"
            android:hint="@string/hint_item_title"
            android:paddingStart="10dp"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pwInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleIntputLayout"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/priceEditTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="20"
            android:hint="@string/hint_price"
            android:inputType="number"
            android:paddingStart="10dp"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/itemImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/itemImageAddButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/itemImageView"
        app:layout_constraintEnd_toEndOf="@id/itemImageView"
        app:layout_constraintTop_toBottomOf="@id/itemImageView"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/white"
        android:text="이미지 등록하기"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/itemAddButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/yellow"
        android:text="상품 등록하기"
        android:textColor="@color/white"
        />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>